public class QuizDetail extends Service {} 
